# OpenQVD

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTES.md  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
crates/openqvd/: Cargo.toml
crates/openqvd-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/openqvd-py/python/openqvd/: __init__.py  duckdb.py  polars.py  polars_plugin.py  py.typed
crates/openqvd-py/src/: lib.rs
crates/openqvd-py/tests/: conftest.py  test_core.py  test_duckdb.py  test_pandas.py  test_polars.py
crates/openqvd/examples/: dump.rs  round_trip.rs  validate_all.rs
crates/openqvd/src/: arrow.rs  error.rs  header.rs  lib.rs  reader.rs  symbols.rs  value.rs  writer.rs
crates/openqvd/tests/: edge_cases.rs  minimal.rs  writer.rs
