[workspace]
resolver = "2"
members = ["crates/openqvd", "crates/openqvd-py"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Sigilweaver/OpenQVD"
rust-version = "1.75"
keywords = ["qvd", "qlik", "qlikview", "qliksense", "data"]
categories = ["parser-implementations", "encoding"]

[workspace.lints.rust]
unsafe_code = "forbid"
