[package]
name = "openqvd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Clean-room reader for Qlik QVD (.qvd) files."

[lints]
workspace = true

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "1"

[dev-dependencies]
# (Populated in later stages.)
