[package]
name = "openqvd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Clean-room reader/writer for Qlik QVD (.qvd) files."
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
arrow = [
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:arrow-cast",
]

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "1"
# Optional Arrow integration
arrow-array  = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
arrow-cast   = { version = "58", optional = true }

[[bin]]
name = "openqvd"
path = "src/bin/openqvd.rs"

[dev-dependencies]
